--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   syncfusion_flutter_charts: ^21.2.4
   firebase_analytics: ^10.10.3
   shared_preferences: ^2.2.3
+  mailer: ^6.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
