--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,20 +10,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
   firebase_core: ^2.30.0
+  firebase_auth: ^4.19.5
   firebase_database: ^10.5.2
   charts_flutter: '>=0.12.0 <0.13.0'
   fl_chart: ^0.67.0
   syncfusion_flutter_charts: ^21.2.4
   firebase_analytics: ^10.10.3
   shared_preferences: ^2.2.3
+  flutter_email_sender: ^6.0.3
+  cloud_firestore: ^4.17.3
   mailer: ^6.1.0
+  # Remove "uses-material-design: true" from here
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
 
 flutter:
-  uses-material-design: true
+  uses-material-design: true  # Move "uses-material-design: true" here
   assets:
     - assets/background.jpg
