--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_email_sender: ^6.0.3
   cloud_firestore: ^4.17.3
   mailer: ^6.1.0
+  mailto: ^2.0.0
+  url_launcher: ^6.2.6
   # Remove "uses-material-design: true" from here
 
 dev_dependencies:
