--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   url_launcher: ^6.2.6
   cloud_functions: ^4.7.5
   emailjs: ^1.3.0
+  file_picker: ^8.0.3
+  excel: ^4.0.3
+  flutter_colorpicker: ^1.1.0
   # Remove "uses-material-design: true" from here
 
 dev_dependencies:
